Fix button covered by link

--- a/instagram_q_a/style.css
+++ b/instagram_q_a/style.css
@@ -35,6 +35,11 @@ body, html {
     top: 0;
     left: 16px;
 }
+.topright {
+    position: absolute;
+    top: 0;
+    right: 16px;
+}
 
 /* Position text in the bottom-left corner */
 .bottomleft {
